--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <link rel="icon" href="favicon-32x32.png">
+        <link rel="icon" href="favicon-32x32.png">\
+        <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 <body>
@@ -25,6 +26,13 @@
 <h5 class="code-line" data-line-start=22 data-line-end=23 ><a id="33_apiconstructorresultsraceraceId_22" href="#33_apiconstructorresultsraceraceId_419">&emsp;3.3 /api/constructor-results/race/{raceId}</a></h5>
 <h5 class="code-line" data-line-start=23 data-line-end=24 ><a id="34_apiconstructorresultsconstructorconstructorId_23" href="#34_apiconstructorresultsconstructorconstructorId_451">&emsp;3.4 /api/constructor-results/constructor/{constructorId}</a></h5>
 <h5 class="code-line" data-line-start=24 data-line-end=25 ><a id="35_apiconstructorresultsmostwins_24" href="#35_apiconstructorresultsmostwins_483">&emsp;3.5 /api/constructor-results/most-wins</a></h5>
+<h3 class="code-line" data-line-start=25 data-line-end=26 ><a id="4_ConstructorStandings_25" href="#4_ConstructorStandings_518">4 ConstructorStandings</a></h3>
+<h5 class="code-line" data-line-start=26 data-line-end=27 ><a id="41_apiconstructorstandings_26" href="#41_apiconstructorstandings_530">&emsp;4.1 /api/constructor-standings</a></h5>
+<h5 class="code-line" data-line-start=27 data-line-end=28 ><a id="42_apiconstructorstandingsid_27" href="#42_apiconstructorstandingsid_564">&emsp;4.2 /api/constructor-standings/{id}</a></h5>
+<h5 class="code-line" data-line-start=28 data-line-end=29 ><a id="43_apiconstructorstandingsraceraceId_28" href="#43_apiconstructorstandingsraceraceId_594">&emsp;4.3 /api/constructor-standings/race/{raceId}</a></h5>
+<h5 class="code-line" data-line-start=29 data-line-end=30 ><a id="44_apiconstructorstandingsconstructorconstructorId_29" href="#44_apiconstructorstandingsconstructorconstructorId_628">&emsp;4.4 /api/constructor-standings/constructor/{constructorId}</a></h5>
+<h5 class="code-line" data-line-start=30 data-line-end=31 ><a id="45_apiconstructorstandingsmostwins_30" href="#45_apiconstructorstandingsmostwins_662">&emsp;4.5 /api/constructor-standings/most-wins</a></h5>
+<h5 class="code-line" data-line-start=31 data-line-end=32 ><a id="45_apiconstructorstandingsmostpoints_31" href="#45_apiconstructorstandingsmostpoints_692">&emsp;4.5 /api/constructor-standings/most-points</a></h5>
 <br/>
 <h1 class="code-line" data-line-start=15 data-line-end=16 ><a id="Docs_15"></a>Docs</h1>
 <p class="has-line-data" data-line-start="17" data-line-end="18">Here you can find all the requests with examples</p>
@@ -108,7 +116,7 @@
 <pre><code class="has-line-data" data-line-start="37" data-line-end="65">&quot;_embedded&quot;: {
         &quot;circuitList&quot;: [
             {
-                &quot;id&quot;: 1,
+                &quot;id&quot;: 853,
                 &quot;circuitRef&quot;: &quot;albert_park&quot;,
                 &quot;name&quot;: &quot;Albert Park Grand Prix Circuit&quot;,
                 &quot;location&quot;: &quot;Melbourne&quot;,
@@ -151,10 +159,10 @@
     </tbody>
 </table>
 <h4 class="code-line" data-line-start=72 data-line-end=73 ><a id="Request_72"></a>Request</h4>
-<p class="has-line-data" data-line-start="73" data-line-end="74"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/circuits/1'</code></p>
+<p class="has-line-data" data-line-start="73" data-line-end="74"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/circuits/853'</code></p>
 <h4 class="code-line" data-line-start=75 data-line-end=76 ><a id="Response_75"></a>Response</h4>
 <pre><code class="has-line-data" data-line-start="77" data-line-end="102">{
-    &quot;id&quot;: 1,
+    &quot;id&quot;: 853,
     &quot;circuitRef&quot;: &quot;albert_park&quot;,
     &quot;name&quot;: &quot;Albert Park Grand Prix Circuit&quot;,
     &quot;location&quot;: &quot;Melbourne&quot;,
@@ -505,7 +513,7 @@
 </tr>
 <tr>
 <td><code>constructorId</code></td>
-<td><code>String</code></td>
+<td><code>Long</code></td>
 <td>Id for the <code>Constructor</code></td>
 </tr>
 <tr>
@@ -712,192 +720,296 @@
     }
 }
 </code></pre>
-
-<style type='text/css'>
-body {
-  font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #111;
-  background-color: #fdfdfd;
-  -webkit-text-size-adjust: 100%;
-  -webkit-font-feature-settings: "kern" 1;
-  -moz-font-feature-settings: "kern" 1;
-  -o-font-feature-settings: "kern" 1;
-  font-feature-settings: "kern" 1;
-  font-kerning: normal;
-  padding: 30px;
+<h2 class="code-line" data-line-start=518 data-line-end=519 ><a id="4_ConstructorStandings_518"></a>4 ConstructorStandings</h2>
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Name</th>
+<th>Type</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><code>id</code></td>
+<td><code>Long</code></td>
+<td>The unique value to identify the ConstructorStandings object.</td>
+</tr>
+<tr>
+<td><code>raceId</code></td>
+<td><code>Long</code></td>
+<td>Id for the <code>Race</code></td>
+</tr>
+<tr>
+<td><code>constructorId</code></td>
+<td><code>Long</code></td>
+<td>Id for the <code>Constructor</code></td>
+</tr>
+<tr>
+<td><code>points</code></td>
+<td><code>double</code></td>
+<td>Points scored by the Constructor</td>
+</tr>
+<tr>
+<td><code>position</code></td>
+<td><code>int</code></td>
+<td>Position of the Constructor</td>
+</tr>
+<tr>
+<td><code>positionText</code></td>
+<td><code>String</code></td>
+<td>Position of the Constructor in <code>String</code> format</td>
+</tr>
+<tr>
+<td><code>wins</code></td>
+<td><code>int</code></td>
+<td>Number of wins</td>
+</tr>
+</tbody>
+</table>
+<h3 class="code-line" data-line-start=530 data-line-end=531 ><a id="41_apiconstructorstandings_530"></a>4.1 /api/constructor-standings</h3>
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Request Type</th>
+<th>Api Endpoint</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>GET</td>
+<td>/api/constructor-standings</td>
+<td>Get all constructor standings</td>
+</tr>
+</tbody>
+</table>
+<h4 class="code-line" data-line-start=536 data-line-end=537 ><a id="Request_536"></a>Request</h4>
+<p class="has-line-data" data-line-start="537" data-line-end="538"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/constructor-standings'</code></p>
+<h4 class="code-line" data-line-start=539 data-line-end=540 ><a id="Response_539"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="541" data-line-end="563">{
+    &quot;_embedded&quot;: {
+        &quot;constructorStandingsList&quot;: [
+            {
+                &quot;id&quot;: 45405,
+                &quot;raceId&quot;: 18,
+                &quot;constructorId&quot;: 1,
+                &quot;points&quot;: 14.0,
+                &quot;position&quot;: 1,
+                &quot;positionText&quot;: &quot;1&quot;,
+                &quot;wins&quot;: 1,
+                &quot;_links&quot;: {
+                    &quot;self&quot;: {
+                        &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-standings/45405&quot;
+                    },
+                    &quot;constructors-standings&quot;: {
+                        &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-standings&quot;
+                    }
+                }
+            },
+    ...
+</code></pre>
+<h3 class="code-line" data-line-start=564 data-line-end=565 ><a id="42_apiconstructorstandingsid_564"></a>4.2 /api/constructor-standings/{id}</h3>
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Request Type</th>
+<th>Api Endpoint</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>GET</td>
+<td>/api/constructor-standings/{id}</td>
+<td>Get a constructor standings based on the <code>id</code></td>
+</tr>
+</tbody>
+</table>
+<h4 class="code-line" data-line-start=570 data-line-end=571 ><a id="Request_570"></a>Request</h4>
+<p class="has-line-data" data-line-start="571" data-line-end="572"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/constructor-standings/45405'</code></p>
+<h4 class="code-line" data-line-start=573 data-line-end=574 ><a id="Response_573"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="575" data-line-end="593">{
+    &quot;id&quot;: 45405,
+    &quot;raceId&quot;: 18,
+    &quot;constructorId&quot;: 1,
+    &quot;points&quot;: 14.0,
+    &quot;position&quot;: 1,
+    &quot;positionText&quot;: &quot;1&quot;,
+    &quot;wins&quot;: 1,
+    &quot;_links&quot;: {
+        &quot;self&quot;: {
+            &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-standings/45405&quot;
+        },
+        &quot;constructors-standings&quot;: {
+            &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-standings&quot;
+        }
+    }
 }
-
-@media only screen and (max-width: 600px) {
-  body {
-    padding: 5px;
-  }
-
-  body > #content {
-    padding: 0px 20px 20px 20px !important;
-  }
+</code></pre>
+<h3 class="code-line" data-line-start=594 data-line-end=595 ><a id="43_apiconstructorstandingsraceraceId_594"></a>4.3 /api/constructor-standings/race/{raceId}</h3>
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Request Type</th>
+<th>Api Endpoint</th>
+<th>raceId</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>GET</td>
+<td>/api/constructor-standings/race/{raceId}</td>
+<td><code>raceId</code></td>
+<td>Get all constructor standings for a specific Race based on a <code>raceId</code></td>
+</tr>
+</tbody>
+</table>
+<h4 class="code-line" data-line-start=600 data-line-end=601 ><a id="Request_600"></a>Request</h4>
+<p class="has-line-data" data-line-start="601" data-line-end="602"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/constructor-standings/race/18'</code></p>
+<h4 class="code-line" data-line-start=603 data-line-end=604 ><a id="Response_603"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="605" data-line-end="627">{
+    &quot;_embedded&quot;: {
+        &quot;constructorStandingsList&quot;: [
+            {
+                &quot;id&quot;: 45405,
+                &quot;raceId&quot;: 18,
+                &quot;constructorId&quot;: 1,
+                &quot;points&quot;: 14.0,
+                &quot;position&quot;: 1,
+                &quot;positionText&quot;: &quot;1&quot;,
+                &quot;wins&quot;: 1,
+                &quot;_links&quot;: {
+                    &quot;self&quot;: {
+                        &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-standings/1&quot;
+                    },
+                    &quot;constructors-standings&quot;: {
+                        &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-standings&quot;
+                    }
+                }
+            },
+        ....
+</code></pre>
+<h3 class="code-line" data-line-start=628 data-line-end=629 ><a id="44_apiconstructorstandingsconstructorconstructorId_628"></a>4.4 /api/constructor-standings/constructor/{constructorId}</h3>
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Request Type</th>
+<th>Api Endpoint</th>
+<th>constructorId</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>GET</td>
+<td>/api/constructor-standings/constructor/{constructorId}</td>
+<td><code>constructorId</code></td>
+<td>Get all constructor standings for a specific Constructor based on a <code>constructorId</code></td>
+</tr>
+</tbody>
+</table>
+<h4 class="code-line" data-line-start=634 data-line-end=635 ><a id="Request_634"></a>Request</h4>
+<p class="has-line-data" data-line-start="635" data-line-end="636"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/constructor-standings/constructor/1'</code></p>
+<h4 class="code-line" data-line-start=637 data-line-end=638 ><a id="Response_637"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="639" data-line-end="661">{
+    &quot;_embedded&quot;: {
+        &quot;constructorStandingsList&quot;: [
+            {
+                &quot;id&quot;: 45405,
+                &quot;raceId&quot;: 18,
+                &quot;constructorId&quot;: 1,
+                &quot;points&quot;: 14.0,
+                &quot;position&quot;: 1,
+                &quot;positionText&quot;: &quot;1&quot;,
+                &quot;wins&quot;: 1,
+                &quot;_links&quot;: {
+                    &quot;self&quot;: {
+                        &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-standings/1&quot;
+                    },
+                    &quot;constructors-standings&quot;: {
+                        &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-standings&quot;
+                    }
+                }
+            },
+        ....
+</code></pre>
+<h3 class="code-line" data-line-start=662 data-line-end=663 ><a id="45_apiconstructorstandingsmostwins_662"></a>4.5 /api/constructor-standings/most-wins</h3>
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Request Type</th>
+<th>Api Endpoint</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>GET</td>
+<td>/api/constructor-standings/most-wins</td>
+<td>Get the constructor standings with the most wins</td>
+</tr>
+</tbody>
+</table>
+<h4 class="code-line" data-line-start=668 data-line-end=669 ><a id="Request_668"></a>Request</h4>
+<p class="has-line-data" data-line-start="669" data-line-end="670"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/constructor-standings/most-wins'</code></p>
+<h4 class="code-line" data-line-start=671 data-line-end=672 ><a id="Response_671"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="673" data-line-end="691">{
+    &quot;id&quot;: 57091,
+    &quot;raceId&quot;: 968,
+    &quot;constructorId&quot;: 131,
+    &quot;points&quot;: 765.0,
+    &quot;position&quot;: 1,
+    &quot;positionText&quot;: &quot;1&quot;,
+    &quot;wins&quot;: 19,
+    &quot;_links&quot;: {
+        &quot;self&quot;: {
+            &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-standings/131&quot;
+        },
+        &quot;constructors-standings&quot;: {
+            &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-standings&quot;
+        }
+    }
 }
-
-body > #content {
-  margin: 0px;
-  max-width: 900px;
-  border: 1px solid #e1e4e8;
-  padding: 10px 40px;
-  padding-bottom: 20px;
-  border-radius: 2px;
-  margin-left: auto;
-  margin-right: auto;
+</code></pre>
+<h3 class="code-line" data-line-start=692 data-line-end=693 ><a id="45_apiconstructorstandingsmostpoints_692"></a>4.5 /api/constructor-standings/most-points</h3>
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Request Type</th>
+<th>Api Endpoint</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>GET</td>
+<td>/api/constructor-standings/most-points</td>
+<td>Get the constructor standings with the most points</td>
+</tr>
+</tbody>
+</table>
+<h4 class="code-line" data-line-start=698 data-line-end=699 ><a id="Request_698"></a>Request</h4>
+<p class="has-line-data" data-line-start="699" data-line-end="700"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/constructor-standings/most-points'</code></p>
+<h4 class="code-line" data-line-start=701 data-line-end=702 ><a id="Response_701"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="703" data-line-end="721">{
+    &quot;id&quot;: 57091,
+    &quot;raceId&quot;: 968,
+    &quot;constructorId&quot;: 131,
+    &quot;points&quot;: 765.0,
+    &quot;position&quot;: 1,
+    &quot;positionText&quot;: &quot;1&quot;,
+    &quot;wins&quot;: 19,
+    &quot;_links&quot;: {
+        &quot;self&quot;: {
+            &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-standings/131&quot;
+        },
+        &quot;constructors-standings&quot;: {
+            &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-standings&quot;
+        }
+    }
 }
-
-hr {
-  color: #bbb;
-  background-color: #bbb;
-  height: 1px;
-  flex: 0 1 auto;
-  margin: 1em 0;
-  padding: 0;
-  border: none;
-}
-
-/**
- * Links
- */
-a {
-  color: #0366d6;
-  text-decoration: none; }
-  a:visited {
-    color: #0366d6; }
-  a:hover {
-    color: #0366d6;
-    text-decoration: underline; }
-
-pre {
-  background-color: #f6f8fa;
-  border-radius: 3px;
-  font-size: 85%;
-  line-height: 1.45;
-  overflow: auto;
-  padding: 16px;
-}
-
-/**
-  * Code blocks
-  */
-
-code {
-  background-color: rgba(27,31,35,.05);
-  border-radius: 3px;
-  font-size: 85%;
-  margin: 0;
-  word-wrap: break-word;
-  padding: .2em .4em;
-  font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
-}
-
-pre > code {
-  background-color: transparent;
-  border: 0;
-  display: inline;
-  line-height: inherit;
-  margin: 0;
-  overflow: visible;
-  padding: 0;
-  word-wrap: normal;
-  font-size: 100%;
-}
-
-
-/**
- * Blockquotes
- */
-blockquote {
-  margin-left: 30px;
-  margin-top: 0px;
-  margin-bottom: 16px;
-  border-left-width: 3px;
-  padding: 0 1em;
-  color: #828282;
-  border-left: 4px solid #e8e8e8;
-  padding-left: 15px;
-  font-size: 18px;
-  letter-spacing: -1px;
-  font-style: italic;
-}
-blockquote * {
-  font-style: normal !important;
-  letter-spacing: 0;
-  color: #6a737d !important;
-}
-
-/**
- * Tables
- */
-table {
-  border-spacing: 2px;
-  display: block;
-  font-size: 14px;
-  overflow: auto;
-  width: 100%;
-  margin-bottom: 16px;
-  border-spacing: 0;
-  border-collapse: collapse;
-}
-
-td {
-  padding: 6px 13px;
-  border: 1px solid #dfe2e5;
-}
-
-th {
-  font-weight: 600;
-  padding: 6px 13px;
-  border: 1px solid #dfe2e5;
-}
-
-tr {
-  background-color: #fff;
-  border-top: 1px solid #c6cbd1;
-}
-
-table tr:nth-child(2n) {
-  background-color: #f6f8fa;
-}
-
-/**
- * Others
- */
-
-img {
-  max-width: 100%;
-}
-
-p {
-  line-height: 24px;
-  font-weight: 400;
-  font-size: 16px;
-  color: #24292e; }
-
-ul {
-  margin-top: 0; }
-
-li {
-  color: #24292e;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5; }
-
-li + li {
-  margin-top: 0.25em; }
-
-* {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: #24292e; }
-
-a:visited {
-  color: #0366d6; }
-
-h1, h2, h3 {
-  border-bottom: 1px solid #eaecef;
-  color: #111;
-  /* Darker */ }</style>
+</code></pre>
 </body>
 </html>
